[package]
authors = ["Zengor <zengor@hotmail.com>"]
edition = "2018"
name = "adventofcode2018"
version = "0.1.0"

[lib]
name = "adventofcode2018"
path = "src/lib.rs"

[[bin]]
name = "adventofcode2018"
path = "src/main.rs"

[dependencies]
hashbrown = "0.1.6"
itertools = "0.7.11"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benches"
harness = false